--- a/app/src/main/res/layout-land/sun.xml
+++ b/app/src/main/res/layout-land/sun.xml
@@ -2,11 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#4b5966 ">
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/moonrise"
+        android:id="@+id/sunrise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/view2"
@@ -16,11 +15,11 @@
         android:layout_toEndOf="@+id/textView7"
         android:layout_toRightOf="@+id/textView7"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/age"
+        android:id="@+id/twilightMorning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView11"
@@ -30,11 +29,11 @@
         android:layout_toEndOf="@+id/textView12"
         android:layout_toRightOf="@+id/textView12"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/ilumination"
+        android:id="@+id/twilightEvening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView10"
@@ -44,11 +43,11 @@
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/nextFullMoon"
+        android:id="@+id/azimuthset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView9"
@@ -58,11 +57,11 @@
         android:layout_toEndOf="@+id/textView10"
         android:layout_toRightOf="@+id/textView10"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/nextNewMoon"
+        android:id="@+id/azimuthrise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView8"
@@ -72,11 +71,11 @@
         android:layout_toEndOf="@+id/textView9"
         android:layout_toRightOf="@+id/textView9"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/moonset"
+        android:id="@+id/sunset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView7"
@@ -86,7 +85,7 @@
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -100,7 +99,6 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:text="Current Time:"
-        android:textColor="#fffff5"
         android:textSize="15sp" />
 
     <TextView
@@ -114,7 +112,7 @@
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#ff0000"
         android:textSize="15sp" />
 
     <TextView
@@ -126,8 +124,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:text="Latitude"
-        android:textColor="#fffff5"
+        android:text="Latitude:"
         android:textSize="13sp" />
 
     <TextView
@@ -139,8 +136,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="longitude:"
-        android:textColor="#fffff5"
+        android:text="Longitude:"
         android:textSize="13sp" />
 
     <TextView
@@ -154,7 +150,7 @@
         android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#ff0000"
         android:textSize="13sp" />
 
     <TextView
@@ -168,7 +164,7 @@
         android:layout_toEndOf="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#ff0000"
         android:textSize="13sp" />
 
     <View
@@ -185,7 +181,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="#fffff5" />
+        android:background="@android:color/black" />
 
     <View
         android:id="@+id/view2"
@@ -201,7 +197,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
-        android:background="#fffff5" />
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textView7"
@@ -213,8 +209,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="Moonrise"
-        android:textColor="#fffff5"
+        android:text="Sunrise:"
         android:textSize="13sp" />
 
     <TextView
@@ -227,8 +222,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="Moonset"
-        android:textColor="#fffff5"
+        android:text="Sunset:"
         android:textSize="13sp" />
 
     <TextView
@@ -241,8 +235,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="NextNewMoon"
-        android:textColor="#fffff5"
+        android:text="AzimuthRise:"
         android:textSize="13sp" />
 
     <TextView
@@ -255,8 +248,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="NextFullMoon"
-        android:textColor="#fffff5"
+        android:text="AzimuthSet:"
         android:textSize="13sp" />
 
     <TextView
@@ -269,8 +261,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="Ilumination"
-        android:textColor="#fffff5"
+        android:text="TwilightEvening:"
         android:textSize="13sp" />
 
     <TextView
@@ -283,8 +274,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="age"
-        android:textColor="#fffff5"
+        android:text="TwilightMorning:"
         android:textSize="13sp" />
     <View
         android:id="@+id/view3"
@@ -300,5 +290,6 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
-        android:background="#fffff5" />
+        android:background="#000000" />
+
 </RelativeLayout>
