--- a/app/src/main/res/layout-sw600dp/moon.xml
+++ b/app/src/main/res/layout-sw600dp/moon.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4b5966 ">
+    android:background="#000000">
 
     <TextView
         android:id="@+id/moonrise"
@@ -16,8 +16,8 @@
         android:layout_toEndOf="@+id/textView7"
         android:layout_toRightOf="@+id/textView7"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/age"
@@ -30,8 +30,8 @@
         android:layout_toEndOf="@+id/textView12"
         android:layout_toRightOf="@+id/textView12"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/ilumination"
@@ -44,8 +44,8 @@
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/nextFullMoon"
@@ -58,8 +58,8 @@
         android:layout_toEndOf="@+id/textView10"
         android:layout_toRightOf="@+id/textView10"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/nextNewMoon"
@@ -72,8 +72,8 @@
         android:layout_toEndOf="@+id/textView9"
         android:layout_toRightOf="@+id/textView9"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/moonset"
@@ -86,8 +86,8 @@
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -101,7 +101,7 @@
         android:layout_marginTop="30dp"
         android:text="Current Time:"
         android:textColor="#fffff5"
-        android:textSize="20sp" />
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/time2"
@@ -114,8 +114,8 @@
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="20sp" />
+        android:textColor="#FF0000"
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -128,7 +128,7 @@
         android:layout_marginTop="30dp"
         android:text="Latitude"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -139,9 +139,9 @@
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:text="longitude:"
+        android:text="Longitude:"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/latitude"
@@ -154,8 +154,8 @@
         android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/longitude"
@@ -168,8 +168,8 @@
         android:layout_toEndOf="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="18sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <View
         android:id="@+id/view"
@@ -213,9 +213,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:text="Moonrise"
+        android:text="Moonrise:"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView8"
@@ -227,9 +227,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:text="Moonset"
+        android:text="Moonset:"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -241,9 +241,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:text="NextNewMoon"
+        android:text="NextNewMoon:"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -255,9 +255,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:text="NextFullMoon"
+        android:text="NextFullMoon:"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView11"
@@ -269,9 +269,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:text="Ilumination"
+        android:text="Ilumination:"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView12"
@@ -283,8 +283,22 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:text="age"
+        android:text="Age:"
         android:textColor="#fffff5"
-        android:textSize="18sp" />
-
+        android:textSize="30sp" />
+    <View
+        android:id="@+id/view3"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_below="@+id/textView12"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="16dp"
+        android:background="#fffff5" />
 </RelativeLayout>
