--- a/app/src/main/res/layout-sw600dp/sun.xml
+++ b/app/src/main/res/layout-sw600dp/sun.xml
@@ -2,92 +2,91 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#4b5966 ">
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/moonrise"
+        android:id="@+id/sunrise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/view2"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_toEndOf="@+id/textView7"
         android:layout_toRightOf="@+id/textView7"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/age"
+        android:id="@+id/twilightMorning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView11"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="14dp"
         android:layout_toEndOf="@+id/textView12"
         android:layout_toRightOf="@+id/textView12"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/ilumination"
+        android:id="@+id/twilightEvening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView10"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/nextFullMoon"
+        android:id="@+id/azimuthset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView9"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/textView10"
         android:layout_toRightOf="@+id/textView10"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/nextNewMoon"
+        android:id="@+id/azimuthrise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView8"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/textView9"
         android:layout_toRightOf="@+id/textView9"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/moonset"
+        android:id="@+id/sunset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView7"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -98,10 +97,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:text="Current Time:"
-        android:textColor="#fffff5"
-        android:textSize="15sp" />
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/time2"
@@ -110,12 +108,12 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="15sp" />
+        android:textColor="#FF0000"
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -125,10 +123,9 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Latitude"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="30dp"
+        android:text="Latitude:"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -138,10 +135,9 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:text="longitude:"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="10dp"
+        android:text="Longitude:"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/latitude"
@@ -154,8 +150,8 @@
         android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/longitude"
@@ -168,8 +164,8 @@
         android:layout_toEndOf="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:text="TextView"
-        android:textColor="#ff9999"
-        android:textSize="13sp" />
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <View
         android:id="@+id/view"
@@ -182,10 +178,10 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="#fffff5" />
+        android:background="@android:color/black" />
 
     <View
         android:id="@+id/view2"
@@ -198,10 +194,10 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
-        android:background="#fffff5" />
+        android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/textView7"
@@ -212,10 +208,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:text="Moonrise"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="20dp"
+        android:text="Sunrise:"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView8"
@@ -226,10 +221,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:text="Moonset"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="15dp"
+        android:text="Sunset:"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -240,10 +234,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:text="NextNewMoon"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="15dp"
+        android:text="AzimuthRise:"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -254,10 +247,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:text="NextFullMoon"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="15dp"
+        android:text="AzimuthSet:"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView11"
@@ -268,10 +260,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:text="Ilumination"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="15dp"
+        android:text="TwilightEvening:"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView12"
@@ -282,10 +273,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:text="age"
-        android:textColor="#fffff5"
-        android:textSize="13sp" />
+        android:layout_marginTop="15dp"
+        android:text="TwilightMorning:"
+        android:textSize="30sp" />
     <View
         android:id="@+id/view3"
         android:layout_width="wrap_content"
@@ -297,8 +287,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
-        android:background="#fffff5" />
+        android:background="#000000" />
 </RelativeLayout>
