--- a/app/src/main/res/layout-land/moon.xml
+++ b/app/src/main/res/layout-land/moon.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4b5966 ">
+    android:background="#000000">
 
     <TextView
         android:id="@+id/moonrise"
@@ -16,7 +16,7 @@
         android:layout_toEndOf="@+id/textView7"
         android:layout_toRightOf="@+id/textView7"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -30,7 +30,7 @@
         android:layout_toEndOf="@+id/textView12"
         android:layout_toRightOf="@+id/textView12"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -44,7 +44,7 @@
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -58,7 +58,7 @@
         android:layout_toEndOf="@+id/textView10"
         android:layout_toRightOf="@+id/textView10"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -72,7 +72,7 @@
         android:layout_toEndOf="@+id/textView9"
         android:layout_toRightOf="@+id/textView9"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -86,7 +86,7 @@
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -114,7 +114,7 @@
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="15sp" />
 
     <TextView
@@ -126,7 +126,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:text="Latitude"
+        android:text="Latitude:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
 
@@ -139,7 +139,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="longitude:"
+        android:text="Longitude:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
 
@@ -154,7 +154,7 @@
         android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <TextView
@@ -168,7 +168,7 @@
         android:layout_toEndOf="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:text="TextView"
-        android:textColor="#ff9999"
+        android:textColor="#FF0000"
         android:textSize="13sp" />
 
     <View
@@ -213,7 +213,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="Moonrise"
+        android:text="Moonrise:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
 
@@ -227,7 +227,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="Moonset"
+        android:text="Moonset:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
 
@@ -241,7 +241,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="NextNewMoon"
+        android:text="NextNewMoon:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
 
@@ -255,7 +255,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="NextFullMoon"
+        android:text="NextFullMoon:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
 
@@ -269,7 +269,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="Ilumination"
+        android:text="Ilumination:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
 
@@ -283,7 +283,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:text="age"
+        android:text="Age:"
         android:textColor="#fffff5"
         android:textSize="13sp" />
     <View
